--- a/client/angular.json
+++ b/client/angular.json
@@ -29,6 +29,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootswatch/dist/united/bootstrap.min.css",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/ngx-spinner/animations/ball-atom.css",
               "src/styles.css",
               "node_modules/font-awesome/css/font-awesome.min.css"
             ],
